# TT_EntityExtraction_NER

./: DEVELOPMENT_TRACKER.md  pyproject.toml  requirements-dev.txt  requirements.txt
doc/: entity-extraction-layer.md
layer_io/: message_envelope.json  ner_layer_output.json  run_from_previous_layers.py
src/: config.py
src/entity_extraction/: __init__.py  input_validator.py  lexicon_enhancer.py  merger.py  ner_extractor.py  normalizer.py  pipeline.py  post_filters.py  regex_matcher.py
src/models/: __init__.py  entity.py  input_schema.py  message_envelope.py  output_schema.py
src/observability/: logging.py  metrics.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/robustness/: __init__.py  test_robustness.py
tests/unit/: test_entity_extraction.py  test_input_validator.py  test_normalizer.py  test_post_filters.py
