[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tt-entity-extraction-ner"
version = "1.0.0"
description = "Entity Extraction + NER pipeline layer for email triage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ner", "entity-extraction", "nlp", "email-triage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "spacy>=3.7",
]

[project.optional-dependencies]
observability = [
    "prometheus-client>=0.19",
    "structlog>=24.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "types-requests",
]
all = [
    "tt-entity-extraction-ner[observability,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501"]
